# ogre-oggsound

./: CMakeLists.txt  ChangeLog.txt  LICENSE  Makefile  OgreOggSoundLib.sln  OgreOggSoundLib.vcproj  OgreOggSoundLib_vc10.sln  OgreOggSoundLib_vc10.vcxproj  OgreOggSoundLib_vc8.sln  OgreOggSoundLib_vc8.vcproj  OgreOggSoundLib_vc9.vcproj  README  ReleaseNotes.txt  annotated.html  annotated_dup.js  class_ogre_ogg_sound_1_1_lockless_queue-members.html  class_ogre_ogg_sound_1_1_lockless_queue.html  class_ogre_ogg_sound_1_1_lockless_queue.js  class_ogre_ogg_sound_1_1_o_o_s_callback-members.html  class_ogre_ogg_sound_1_1_o_o_s_callback.html  class_ogre_ogg_sound_1_1_o_o_s_callback__inherit__graph.md5  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer-members.html  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer.html  class_ogre_ogg_sound_1_1_o_s_s_callback_pointer__inherit__graph.md5  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound-members.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound.js  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound_1_1_sound_listener-members.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound_1_1_sound_listener.html  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound__inherit__graph.map  class_ogre_ogg_sound_1_1_ogre_ogg_i_sound__inherit__graph.md5  class_ogre_ogg_sound_1_1_ogre_ogg_listener-members.html  class_ogre_ogg_sound_1_1_ogre_ogg_listener.html  class_ogre_ogg_sound_1_1_ogre_ogg_listener.js  class_ogre_ogg_sound_1_1_ogre_ogg_listener__inherit__graph.map  class_ogre_ogg_sound_1_1_ogre_ogg_listener__inherit__graph.md5  class_ogre_ogg_sound_1_1_ogre_ogg_sound_factory-members.html  class_ogre_ogg_sound_1_1_ogre_ogg_sound_factory.html  class_ogre_ogg_sound_1_1_ogre_ogg_sound_factory.js  class_ogre_ogg_sound_1_1_ogre_ogg_sound_factory__inherit__graph.map  (+148 more)
trunk/: CMakeCache.txt  CMakeLists.txt  COPYING.LESSER  ChangeLog.txt  Makefile  OgreOggSoundLib.vcproj  OgreOggSoundLib_vc10.sln  OgreOggSoundLib_vc10.vcxproj  OgreOggSoundLib_vc8.sln  OgreOggSoundLib_vc8.vcproj  OgreOggSoundLib_vc9.sln  OgreOggSoundLib_vc9.vcproj  README  ReleaseNotes.txt  cmake_install.cmake
trunk/Debug/: BuildLog.htm  OgreOggSound_d.dll.intermediate.manifest  OgreOggSound_d.lib
trunk/Release/: BuildLog.htm  OgreOggSound.lib
trunk/TestDemo/: TestDemo.vcproj  TestDemo_vc8.vcproj
trunk/TestDemo/Debug/: Plugins.cfg  resources.cfg
trunk/TestDemo/Release/: Plugins.cfg
trunk/TestDemo/include/: InputManager.h  MainApp.h  MainOgre.h
trunk/TestDemo/src/: InputManager.cpp  MainApp.cpp  MainOgre.cpp  main.cpp
trunk/dependencies/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib  libvorbisfile_static_d.lib
trunk/dependencies/libs/: vorbisfile_static_d.lib
trunk/dependencies/x64/: libvorbis_static_d.lib  libvorbisfile_static_d.lib
trunk/docs/: Doxyfile  docs
trunk/docs/html/: _lockless_queue_8h.html  _lockless_queue_8h_source.html  _ogg_ogre_sound_8h-source.html  _ogg_ogre_sound_8h.html  _ogg_ogre_sound_prereqs_8h-source.html  _ogg_ogre_sound_prereqs_8h.html  _ogre_ogg_i_sound_8cpp-source.html  _ogre_ogg_i_sound_8cpp.html  _ogre_ogg_i_sound_8cpp__incl.md5  _ogre_ogg_i_sound_8cpp_source.html  _ogre_ogg_i_sound_8h-source.html  _ogre_ogg_i_sound_8h.html  _ogre_ogg_i_sound_8h__dep__incl.md5  _ogre_ogg_i_sound_8h__incl.md5  _ogre_ogg_i_sound_8h_source.html  _ogre_ogg_listener_8cpp-source.html  _ogre_ogg_listener_8cpp.html  _ogre_ogg_listener_8cpp__incl.md5  _ogre_ogg_listener_8cpp_source.html  _ogre_ogg_listener_8h-source.html  _ogre_ogg_listener_8h.html  _ogre_ogg_listener_8h__dep__incl.md5  _ogre_ogg_listener_8h_source.html  _ogre_ogg_sound_8h-source.html  _ogre_ogg_sound_8h.html  _ogre_ogg_sound_8h__dep__incl.md5  _ogre_ogg_sound_8h__incl.md5  _ogre_ogg_sound_8h_source.html  _ogre_ogg_sound_callback_8h-source.html  _ogre_ogg_sound_callback_8h.html  _ogre_ogg_sound_callback_8h__incl.md5  _ogre_ogg_sound_callback_8h_source.html  _ogre_ogg_sound_factory_8cpp-source.html  _ogre_ogg_sound_factory_8cpp.html  _ogre_ogg_sound_factory_8cpp_source.html  _ogre_ogg_sound_factory_8h-source.html  _ogre_ogg_sound_factory_8h.html  _ogre_ogg_sound_factory_8h_source.html  _ogre_ogg_sound_manager_8h-source.html  _ogre_ogg_sound_manager_8h.html  (+196 more)
trunk/include/: LocklessQueue.h  OggOgreSound.h  OggOgreSoundPrereqs.h  OgreOggISound.h  OgreOggListener.h  OgreOggSound.h  OgreOggSoundCallback.h  OgreOggSoundFactory.h  OgreOggSoundManager.h  OgreOggSoundPlugin.h  OgreOggSoundPrereqs.h  OgreOggSoundRecord.h  OgreOggStaticSound.h  OgreOggStaticWavSound.cpp  OgreOggStaticWavSound.h  OgreOggStreamSound.h  OgreOggStreamWavSound.h  apimainpage.txt
trunk/include/CVS/: Entries  Entries.Extra
trunk/include/vorbis/CVS/: Repository  (+3 more)
trunk/lib/: OgreOggSound.lib  OgreOggSound_d.lib
trunk/ogg/: README
trunk/ogg/CVS/: Entries.Extra
trunk/ogg/src/: framing.c
trunk/ogg/win32/: ogg.def  ogg.sln  ogg_static.vcproj
trunk/src/: OgreOggISound.cpp  OgreOggListener.cpp  OgreOggSoundFactory.cpp  OgreOggSoundManager.cpp  OgreOggSoundPlugin.cpp  OgreOggSoundPluginDllStart.cpp  OgreOggSoundRecord.cpp  OgreOggStaticSound.cpp  OgreOggStaticWavSound.cpp  OgreOggStreamSound.cpp  OgreOggStreamWavSound.cpp  ogreoggsoundmanager.cpp  ogreoggstreamsound.cpp
trunk/src/CVS/: Entries  Entries.Extra  Entries.Extra.Old  Entries.Old  Repository
trunk/vorbis/CVS/: Entries  Entries.Extra  Repository
trunk/vorbis/doc/: Vorbis_I_spec.html
trunk/vorbis/examples/: chaining_example.c  decoder_example.c  encoder_example.c  vorbisfile_example.c
trunk/vorbis/lib/: analysis.c  bitrate.c  bitrate.h  codebook.c  codebook.h  codec_internal.h  envelope.h  floor0.c  floor1.c  highlevel.h  lookup.c  lookups.pl  lsp.c  lsp.h  mapping0.c  mdct.h  os.h  psy.c  psy.h  registry.c  registry.h  res0.c  scales.h  smallft.c  synthesis.c
trunk/vorbis/vq/: bookutil.h  distribution.c  latticepare.c  localcodebook.h  lspdata.c  residuedata.c  residuesplit.c  run.c  train.c  vqext.h  vqgen.c  vqgen.h  vqsplit.c
trunk/vorbis/win32/: vorbis.def  vorbisenc_static.vcproj  vorbisfile_dynamic.vcproj  vorbisfile_static.vcproj
(+846 files in other folders)
