
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)



PROJECT(OgreOggSound)



IF(CMAKE_BUILD_TYPE STREQUAL Debug)

         ADD_DEFINITIONS(-D_DEBUG)

         ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)


         SET(CMAKE_MODULE_PATH  ${PROJECT_SOURCE_DIR}/cmake-extensions/)

         FIND_PACKAGE(PkgConfig)


         PKG_CHECK_MODULES(OGRE OGRE)

         PKG_CHECK_MODULES(OPENAL openal)

         PKG_CHECK_MODULES(OGG ogg)

         PKG_CHECK_MODULES(VORBIS vorbis)


         AUX_SOURCE_DIRECTORY(src OGREOGGSOUND_SRCS)


         ADD_DEFINITIONS(-DLINUX)

         INCLUDE_DIRECTORIES(include ${OGRE_INCLUDE_DIRS} ${OPENAL_INCLUDE_DIRS} ${OGG_INCLUDE_DIRS} ${VORBIS_INCLUDE_DIRS} /usr/include/AL)

         LINK_DIRECTORIES(${OGRE_LIBRARY_DIRS} ${OPENAL_LIBRARY_DIRS} ${OGG_INCLUDE_DIRS} ${VORBIS_INCLUDE_DIRS})

         LINK_LIBRARIES(${OGRE_LIBRARIES} ${OPENAL_LIBRARIES} ${OGG_LIBRARIES} ${VORBIS_LIBRARIES})

         ADD_LIBRARY(ogreoggsound STATIC ${OGREOGGSOUND_SRCS})